_sass/_buttons.scss
@charset "utf-8";

%ext-link {
    display: inline-block;
    fill: $ext-link-color;
    font: 600 18px/1.8 $base-font-family;
    color: $ext-link-color;
    border-radius: 0.3em;
    border: 1px solid $ext-link-color;
    margin: 3px;
    padding: 0.15em 0.35em 0em calc(#{$button-icon-size} + 0.5em);
    vertical-align: middle;
    filter: grayscale(0);
    -webkit-filter: grayscale(0);

    &::before {
        content: "";
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        background-repeat: no-repeat;
        background-position: 0.25em center;
        background-size: auto $button-icon-size;
        z-index: -1;

        filter: grayscale(1) brightness(1.2);
        -webkit-filter: grayscale(1) brightness(1.2);
    }

    &:hover {
        fill: $brand-color;
        color: $brand-color;
        border-color: $brand-color;
        text-decoration: none;
        transition: all .3s ease-in-out;

        &::before {
            filter: none;
            -webkit-filter: grayscale(0);
            transition: all .3s ease-in-out;
        }
    }

}

a.gitlab {
    @extend %ext-link;
    &::before {
        background-image: url('/assets/svg/gitlab.svg');
    }
}

a.github {
    @extend %ext-link;
    &::before {
        background-image: url('/assets/svg/github.svg');
    }
}

a.download {
    @extend %ext-link;
    &::before {
        background-image: url('/assets/svg/download.svg');
    }
}

a.button {
    @extend %ext-link;
    padding-left: 0.35em;
}

p.centered {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

